@startuml Client

class Client{
    - senderQueue: std::stared_ptr<Queue<std::unique_ptr<CommandDTO>>>
    - lobbyQueue: std::stared_ptr<Queue<std::unique_ptr<DTO>>>
    - gameQueue: std::stared_ptr<Queue<std::unique_ptr<DTO>>>
}
class LobbyInit
package "Lobby" as LobbyPkg{}
package "SDL" as SDLPkg{}

class LobbyController{
    - lobbyQueue: std::stared_ptr<Queue<std::unique_ptr<DTO>>>
}
class GameController {
    - gameQueue: std::stared_ptr<Queue<std::unique_ptr<DTO>>>
}
class Serializer {
    - senderQueue: std::stared_ptr<Queue<std::unique_ptr<CommandDTO>>>
}
class SenderThread {
    - senderQueue: std::stared_ptr<Queue<std::unique_ptr<CommandDTO>>>
}
class Socket
class ReceiverThread
class Protocol
class Deserializer {
    - lobbyQueue: std::stared_ptr<Queue<std::unique_ptr<DTO>>>
    - gameQueue: std::stared_ptr<Queue<std::unique_ptr<DTO>>>
}

Client --> LobbyInit
Client --> LobbyController
Client --> GameController

LobbyInit --> LobbyPkg.Lobby
Client --> SDLPkg.GameScreen

LobbyPkg --> LobbyController
LobbyCotroller --> LobbyPkg

SDLPkg --> GameController
GameController --> SDLPkg

LobbyController --> Serializer
GameController --> Serializer
Serializer --> SenderThread
SenderThread --> Socket
Protocol --> Socket
ReceiverThread --> Protocol
ReceiverThread --> Deserializer
Deserializer --> LobbyController
GameController <-- Deserializer

@enduml